# trapper-keeper

./: .gitignore  LICENSE  README.md  Taskfile.yml  main.py  pyproject.toml
src/trapper_keeper/: __init__.py  __main__.py  main.py  sqlite_kvstore.py
src/trapper_keeper/resources/: config.toml  st.toml
src/trapper_keeper/util/: __init__.py  db_utils.py  keegen.py
tests/: __init__.py  test_db_utils.py  test_keegen.py  test_trapper_keeper.py
tests/resource/: test_store.kdbx
tests/test_resources/: test_store.kdbx  test_token
trapper_keeper/: main.py
