[tool.poetry]
name = "trapper-keeper"
version = "0.2.0"
description = ""
authors = ["Jeremy Hettenhouser <jhettenh@gmail.com>"]
readme = "README.md"
packages = [
    { include = "trapper_keeper", from = "trapper_keeper" }
]

[tool.ruff]
    indent-width = 2
    line-length = 128
    target-version = "py311"

    exclude = [
        ".eggs",
        ".git",
        ".ipynb_checkpoints",
        ".mypy_cache",
        ".pytest_cache",
        ".pytype",
        ".ruff_cache",
        ".venv",
        "tests",
        "__pypackages__",
        "__pycache__",
        "build",
        "dist",
    ]

    lint.ignore = [
        "D203",
        "D213",
        "E501",
        "PGH003",
        "RET504",
        "S101",
        "S307",
        "D205",
        "ISC001",
        "E111",
    ]
    lint.ignore-init-module-imports = true
    lint.select = [
        "A",
        "ASYNC",
        "B",
        "C4",
        "C90",
        "D",
        "DTZ",
        "E",
        "F",
        "FLY",
        "I",
        "ISC",
        "LOG",
        "N",
        "NPY",
        "PERF",
        "PGH",
        "PIE",
        "PL",
        "PT",
        "Q",
        "RET",
        "RUF",
        "RSE",
        "SIM",
        "TID",
        "UP",
        "W",
        "YTT",
    ]
    lint.unfixable = ["F401", "F841"]

[tool.ruff.format]
    line-ending = "lf"


[tool.ruff.lint.pydocstyle]
    convention = "google"

[tool.ruff.lint.isort]
    section-order = [
        "future",
        "standard-library",
        "third-party",
        "first-party",
        "tests",
        "local-folder",
    ]

[tool.ruff.lint.isort.sections]
    "tests" = ["tests"]

[tool.poetry.dependencies]
python = "^3.12"
pykeepass = "^4.0.7.post1"
xdg-base-dirs = "^6.0.1"
pydantic = "^2.7.1"

[tool.poetry.group.dev.dependencies]
setuptools = "^70.0.0"
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
